tied more agency detail to single time zone versuses mutliple time zones

--- a/app/views/agencies/show.html.erb
+++ b/app/views/agencies/show.html.erb
@@ -54,7 +54,7 @@
         </div>
         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
           <dt class="text-sm font-medium text-gray-500">Time Zone</dt>
-          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= @agency.agency_detail.time_zones.first %></dd>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= @agency.agency_detail.time_zone %></dd>
         </div>
 
         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
