--- a/app/views/agencies/_tokani_form.html.erb
+++ b/app/views/agencies/_tokani_form.html.erb
@@ -74,8 +74,8 @@
           </div>
         </div>
         <div class="sm:col-span-3">
-          <label for="street-address" class="block text-sm font-medium text-gray-700">Time zones *</label>
-          <%= agency_detail.select :time_zones, options_for_select(time_zone_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %> 
+          <label for="street-address" class="block text-sm font-medium text-gray-700">Time zone *</label>
+          <%= agency_detail.select :time_zone, options_for_select(time_zone_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %> 
         </div>
       </div>
     </div>
