--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -250,7 +250,7 @@
   display: none;
   margin-top: 0.5rem;
   z-index: 50;
-  position: absolute;
+  /* position: absolute; */
 }
 
 .multiselect__dropdown--open {
