--- a/app/views/bill_rates/_form.html.erb
+++ b/app/views/bill_rates/_form.html.erb
@@ -177,7 +177,7 @@
                   <div class="relative flex ">
                     <div class="flex h-5 items-center">
                       <div data-controller="popover" data-popover-translate-x="0" data-popover-translate-y="-128%" data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut">
-                        <div class="content hidden absolute max-w-xs bg-gray-300 rounded p-2 inline-block inline-block rounded px-7 pt-3 pb-2.5 text-sm font-bold uppercase leading-normal text-tokanisecondary-500 transition duration-150 ease-in-out" data-popover-target="content">
+                        <div class="content hidden absolute max-w-xs bg-slate-200 shadow-lg rounded p-2 inline-block inline-block rounded px-7 pt-3 pb-2.5 text-sm font-bold uppercase leading-normal text-tokanisecondary-400 transition duration-150 ease-in-out" data-popover-target="content">
                           Changing langauage specific rate to default will remove languages from rate.
                         </div>
                         <div  class="flex h-5 items-center" id="default_rate">
