--- a/app/views/shared/_account_navbar.html.erb
+++ b/app/views/shared/_account_navbar.html.erb
@@ -5,6 +5,11 @@
   <% unless turbo_native_app? || current_account_user.interpreter? %>
     <%= nav_link_to t(".billing"), subscriptions_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: ["/subscriptions", "/payment_methods"] if Jumpstart.config.payments_enabled? && policy(:application).show_billing? %>
   <% end %>
+
+  <% if !current_user.is_interpreter? %>
+    <%= nav_link_to "Notifications", notification_settings_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/notification_settings" %>
+  <% end %>
+
   <%= nav_link_to t(".accounts"), accounts_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/accounts" %>
   <% if current_user.interpreter_detail_filled_out? %>
     <%= nav_link_to t(".interpreter_details"), interpreter_detail_path(current_user.interpreter_detail), class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/interpreter_details" if policy(:interpreter).show_account_nav? %>
